--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1122,6 +1122,10 @@ $max-columns: 12;
     vertical-align: middle;
   }
 
+  .select-arrow.disabled {
+    background-color: #input-disabled-background-color;
+  }
+
   input[type=text]:disabled, textarea:disabled, select:disabled, .checkbox-wrapper.disabled {
     border-color: $input-disabled-border-color;
     background-color: $input-disabled-background-color;
