--- a/resources/private/common-html/sass/partials/_theme.scss
+++ b/resources/private/common-html/sass/partials/_theme.scss
@@ -126,6 +126,7 @@ $input-disabled-border-color: $gray221;
 $input-disabled-background-color: $gray246;
 $input-focus-border-color: $orange-light;
 $input-required-border-color: $orange-dark;
+$input-select-disabled-icon: $gray187;
 
 $gray-link:   $gray85;
 $gray-hover:  $gray119;
