--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@import url('main-blessed1.css?z=1453978462781');
+@import url('main-blessed1.css?z=1453981932730');
 
 /* line 49, ../../../private/common-html/sass/partials/_conversation.scss */
 .comment .comment-party span {
@@ -892,26 +892,44 @@
 .autocomplete-component .autocomplete-selection-wrapper.active {
   border-color: #f7ac2e;
 }
+/* line 23, ../../../private/common-html/sass/partials/_autocomplete.scss */
+.autocomplete-component .autocomplete-selection-wrapper.disabled {
+  border-color: #dddddd;
+  background-color: #f6f6f6;
+}
+/* line 26, ../../../private/common-html/sass/partials/_autocomplete.scss */
+.autocomplete-component .autocomplete-selection-wrapper.disabled i.tag-chevron {
+  color: #bbbbbb;
+}
 /* line 29, ../../../private/common-html/sass/partials/_autocomplete.scss */
+.autocomplete-component .autocomplete-selection-wrapper.disabled li.tag {
+  color: #bbbbbb !important;
+  cursor: default !important;
+}
+/* line 32, ../../../private/common-html/sass/partials/_autocomplete.scss */
+.autocomplete-component .autocomplete-selection-wrapper.disabled li.tag i.tag-remove {
+  cursor: default !important;
+}
+/* line 43, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-selection-wrapper span.autocomplete-selection {
   width: 100%;
   height: 100%;
   display: inline-block;
   box-sizing: border-box;
 }
-/* line 34, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 48, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-selection-wrapper span.autocomplete-selection ul.tags {
   list-style: none;
   padding: 0;
 }
-/* line 37, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 51, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-selection-wrapper span.autocomplete-selection ul.tags li {
   display: inline-block;
   max-width: 100%;
   margin-bottom: -7px;
   margin-right: -4px;
 }
-/* line 42, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 56, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-selection-wrapper span.autocomplete-selection ul.tags li.tag {
   cursor: pointer;
   position: relative;
@@ -922,30 +940,24 @@
   overflow: hidden;
   color: #f39129;
 }
-/* line 51, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 65, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-selection-wrapper span.autocomplete-selection ul.tags li.tag span.tag-label {
   line-height: 36px;
   vertical-align: top;
   margin-right: 6px;
 }
-/* line 56, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 70, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-selection-wrapper span.autocomplete-selection ul.tags li.tag .tag-remove {
-  color: #f39129;
   line-height: 36px;
   margin: 0 6px;
 }
-/* line 65, ../../../private/common-html/sass/partials/_autocomplete.scss */
-.autocomplete-component .autocomplete-selection-wrapper span.autocomplete-selection-wrapper.disabled {
-  border-color: #dddddd;
-  background-color: #f6f6f6;
-}
-/* line 70, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 79, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-selection-wrapper span.caption, .autocomplete-component .autocomplete-selection-wrapper span.selection-text {
   cursor: default;
   line-height: 38px;
   padding-left: 6px;
 }
-/* line 75, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 84, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-selection-wrapper i.tag-chevron {
   position: absolute;
   bottom: 8px;
@@ -954,17 +966,17 @@
   color: #f39129;
   margin: 0;
 }
-/* line 82, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 91, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-selection-wrapper i.tag-chevron.toggle {
   color: #fbc732;
 }
-/* line 88, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 97, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown {
   width: inherit;
   position: absolute;
   z-index: 1;
 }
-/* line 92, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 101, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown input.autocomplete-input {
   width: 100%;
   height: 40px;
@@ -972,7 +984,7 @@
   display: block;
   box-sizing: border-box;
 }
-/* line 99, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 108, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown ul.autocomplete-result {
   position: absolute;
   top: 38px;
@@ -988,23 +1000,23 @@
   background-color: #fff;
   color: black;
 }
-/* line 115, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 124, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown ul.autocomplete-result.autocomplete-result-grouped li.autocomplete-result-item {
   padding: 0 12px;
 }
-/* line 120, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 129, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown ul.autocomplete-result li {
   height: 40px;
   line-height: 40px;
 }
-/* line 125, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 134, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown ul.autocomplete-result li.autocomplete-result-item, .autocomplete-component .autocomplete-dropdown ul.autocomplete-result li.autocomplete-result-empty {
   cursor: default;
   display: list-item;
   list-style-type: none;
   padding: 0 6px;
 }
-/* line 131, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 140, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown ul.autocomplete-result li.autocomplete-result-item {
   cursor: pointer;
   position: relative;
@@ -1012,16 +1024,16 @@
   overflow: hidden;
   padding-right: 6px;
 }
-/* line 138, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 147, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown ul.autocomplete-result li.autocomplete-result-item.active {
   background-color: #f7ac2e;
   color: #fff;
 }
-/* line 141, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 150, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown ul.autocomplete-result li.autocomplete-result-item.active:active {
   background-color: #fbc732;
 }
-/* line 145, ../../../private/common-html/sass/partials/_autocomplete.scss */
+/* line 154, ../../../private/common-html/sass/partials/_autocomplete.scss */
 .autocomplete-component .autocomplete-dropdown ul.autocomplete-result li.autocomplete-group-header {
   font-weight: 700;
   padding-left: 6px;
