--- a/resources/private/common-html/sass/views/_attachment.scss
+++ b/resources/private/common-html/sass/views/_attachment.scss
@@ -273,3 +273,24 @@ td.comment-text {
 .modal-body p {
   max-width: $attachment-modal-width;
 }
+
+.drop-zone {
+  display: table-cell;
+  vertical-align: middle;
+  color: #fff;
+  width: 320px;
+  height: 240px;
+  text-align: center;
+  background-color: $green-dark;
+  h1 {
+    float: none;
+    display: block;
+    color: #fff;
+  }
+  &.active {
+    background-color: $green;
+  }
+  i {
+    font-size: 50px;
+  }
+}
