--- a/resources/private/common-html/sass/partials/__guests.scss
+++ b/resources/private/common-html/sass/partials/__guests.scss
@@ -2,39 +2,39 @@
 .bubble-dialog {
   $border-color: $grid-border-color;
   $bg-color: white;
-  $nubbin: 20px;
+  /* $nubbin: 20px; */
   $pad: 20px;
 
-  margin-top: 1.5 * $nubbin;
+  /* margin-top: 1.5 * $nubbin; */
   padding: $pad $pad $pad $pad;
   position: relative;
   background: $bg-color;
   border: 1px solid $border-color;
 
-  &:after,
-  &:before {
-    bottom: 100%;
-    left: 60px;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-  }
+  /* &:after, */
+  /* &:before { */
+  /*   bottom: 100%; */
+  /*   left: 60px; */
+  /*   border: solid transparent; */
+  /*   content: " "; */
+  /*   height: 0; */
+  /*   width: 0; */
+  /*   position: absolute; */
+  /*   pointer-events: none; */
+  /* } */
 
-  &:after {
-    border-color: transparentize( $bg-color, 1);
-    border-bottom-color: $bg-color;
-    border-width: $nubbin;
-    margin-left: -$nubbin;
-  }
-  &:before {
-    border-color: transparentize( $border-color, 1);
-    border-bottom-color: $border-color;
-    border-width: $nubbin + 1px;
-    margin-left: -$nubbin - 1px;
-  }
+  /* &:after { */
+  /*   border-color: transparentize( $bg-color, 1); */
+  /*   border-bottom-color: $bg-color; */
+  /*   border-width: $nubbin; */
+  /*   margin-left: -$nubbin; */
+  /* } */
+  /* &:before { */
+  /*   border-color: transparentize( $border-color, 1); */
+  /*   border-bottom-color: $border-color; */
+  /*   border-width: $nubbin + 1px; */
+  /*   margin-left: -$nubbin - 1px; */
+  /* } */
 
   .left-buttons {
     margin-top: $pad;
@@ -80,6 +80,8 @@
     }
   }
 }
+
+@include bubble-arrow( bubble-dialog-arrow, $grid-border-color, white);
 
 .auth-table {
   tr {
