--- a/resources/private/common-html/sass/partials/_help.scss
+++ b/resources/private/common-html/sass/partials/_help.scss
@@ -28,43 +28,47 @@
 /*   margin-left: -15px; */
 /* } */
 
-@mixin bubble-arrow( $cls, $border, $bg ) {
+@mixin bubble-arrow( $cls, $border, $bg, $container: stacked, $size: 15px ) {
   .#{$cls} {
-    position: relative;
-    z-index: 100;
-  }
-  .#{$cls}:after, .#{$cls}:before {
-                        bottom: 100%;
-                        left: 50%;
-                        border: solid transparent;
-                        content: " ";
-                        height: 0;
-                        width: 0;
-                        position: absolute;
-                        pointer-events: none;
-                        z-index: 100;
-                        overflow-y: visible;
-                      }
+  position: relative;
+  z-index: 100;
+}
+
+  .#{$cls}:after,
+  .#{$cls}:before {
+                    bottom: 100%;
+                    left: 50%;
+                    border: solid transparent;
+                    content: " ";
+                    height: 0;
+                    width: 0;
+                    position: absolute;
+                    pointer-events: none;
+                    z-index: 100;
+                    overflow-y: visible;
+                  }
 
   .#{$cls}:after {
     border-color: transparentize( $bg, 1);
     border-bottom-color: $bg;
-    border-width: 14px;
-    margin-left: -14px;
+    border-width: $size - 1px; //14px;
+    margin-left:  -$size + 1px; //-14px;
   }
   .#{$cls}:before {
     border-color: transparentize( $border, 1);
     border-bottom-color: $border;
-    border-width: 15px;
-    margin-left: -15px;
+    border-width: $size; //15px;
+    margin-left:  -$size //-15px;
   }
 
-  .stacked .#{$cls} {
-  overflow-y: visible;
-  margin-top: 20px;
-  margin-bottom: -1px;
+
+  .#{$container} .#{$cls} {
+    overflow-y: visible;
+    margin-top: $size + 5px; //20px;
+    margin-bottom: -1px;
   }
 }
+
 
 @include bubble-arrow( help-arrow, $orange, $gray246);
 
