--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,5 +1,66 @@
-@import url('main-blessed1.css?z=1454324231407');
+@import url('main-blessed1.css?z=1454339238831');
 
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-96em {
+  max-height: 96em;
+  overflow-y: auto;
+}
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-97em {
+  max-height: 97em;
+  overflow-y: auto;
+}
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-98em {
+  max-height: 98em;
+  overflow-y: auto;
+}
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-99em {
+  max-height: 99em;
+  overflow-y: auto;
+}
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-100em {
+  max-height: 100em;
+  overflow-y: auto;
+}
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-101em {
+  max-height: 101em;
+  overflow-y: auto;
+}
+
+/* line 194, ../../../private/common-html/sass/partials/_tables.scss */
+.header-table {
+  margin: 0;
+}
+/* line 196, ../../../private/common-html/sass/partials/_tables.scss */
+.header-table table {
+  margin: 0;
+}
+
+/* line 201, ../../../private/common-html/sass/partials/_tables.scss */
+.header-table > tbody > tr > td {
+  padding: 0;
+}
+
+/* line 205, ../../../private/common-html/sass/partials/_tables.scss */
+.header-table > tfoot > tr:hover {
+  background-color: transparent;
+}
+
+/* line 209, ../../../private/common-html/sass/partials/_tables.scss */
+td.positive {
+  background-color: #2ca92c;
+  color: white;
+}
 
 /* line 213, ../../../private/common-html/sass/partials/_tables.scss */
 td.negative {
@@ -1013,8 +1074,9 @@ ul.tabs {
   z-index: 100;
 }
 
-/* line 36, ../../../private/common-html/sass/partials/_help.scss */
-.help-arrow:after, .help-arrow:before {
+/* line 37, ../../../private/common-html/sass/partials/_help.scss */
+.help-arrow:after,
+.help-arrow:before {
   bottom: 100%;
   left: 50%;
   border: solid transparent;
@@ -1027,7 +1089,7 @@ ul.tabs {
   overflow-y: visible;
 }
 
-/* line 49, ../../../private/common-html/sass/partials/_help.scss */
+/* line 51, ../../../private/common-html/sass/partials/_help.scss */
 .help-arrow:after {
   border-color: rgba(246, 246, 246, 0);
   border-bottom-color: #f6f6f6;
@@ -1035,7 +1097,7 @@ ul.tabs {
   margin-left: -14px;
 }
 
-/* line 55, ../../../private/common-html/sass/partials/_help.scss */
+/* line 57, ../../../private/common-html/sass/partials/_help.scss */
 .help-arrow:before {
   border-color: rgba(247, 172, 46, 0);
   border-bottom-color: #f7ac2e;
@@ -1043,27 +1105,27 @@ ul.tabs {
   margin-left: -15px;
 }
 
-/* line 62, ../../../private/common-html/sass/partials/_help.scss */
+/* line 65, ../../../private/common-html/sass/partials/_help.scss */
 .stacked .help-arrow {
   overflow-y: visible;
   margin-top: 20px;
   margin-bottom: -1px;
 }
 
-/* line 71, ../../../private/common-html/sass/partials/_help.scss */
+/* line 75, ../../../private/common-html/sass/partials/_help.scss */
 .help-toggle {
   margin-left: 12px;
   display: inline-block;
   color: #f39129;
   text-align: center;
 }
-/* line 78, ../../../private/common-html/sass/partials/_help.scss */
+/* line 82, ../../../private/common-html/sass/partials/_help.scss */
 .help-toggle .lupicon-circle-question {
   margin-top: 5px;
   margin-bottom: 10px;
   cursor: pointer;
 }
-/* line 85, ../../../private/common-html/sass/partials/_help.scss */
+/* line 89, ../../../private/common-html/sass/partials/_help.scss */
 .help-toggle .lupicon-circle-question.expanded {
   color: #f7ac2e;
 }
@@ -1073,12 +1135,12 @@ ul.tabs {
 /*   margin-top: 20px; */
 /*   margin-bottom: -1px; */
 /* } */
-/* line 97, ../../../private/common-html/sass/partials/_help.scss */
+/* line 101, ../../../private/common-html/sass/partials/_help.scss */
 .stacked.help-toggle {
   overflow-y: visible;
 }
 
-/* line 102, ../../../private/common-html/sass/partials/_help.scss */
+/* line 106, ../../../private/common-html/sass/partials/_help.scss */
 .help-text {
   display: none;
   position: relative;
@@ -1088,29 +1150,29 @@ ul.tabs {
   margin-bottom: 24px;
   border: 1px solid #f7ac2e;
 }
-/* line 111, ../../../private/common-html/sass/partials/_help.scss */
+/* line 115, ../../../private/common-html/sass/partials/_help.scss */
 .help-text p:last-child {
   margin-bottom: 0;
 }
 
-/* line 117, ../../../private/common-html/sass/partials/_help.scss */
+/* line 121, ../../../private/common-html/sass/partials/_help.scss */
 .tab-info {
   width: 80%;
 }
 
-/* line 124, ../../../private/common-html/sass/partials/_help.scss */
+/* line 128, ../../../private/common-html/sass/partials/_help.scss */
 .help-reset {
   clear: both;
   max-height: 6px;
 }
 
-/* line 129, ../../../private/common-html/sass/partials/_help.scss */
+/* line 133, ../../../private/common-html/sass/partials/_help.scss */
 .panel-info {
   width: 100%;
   text-align: justify;
 }
 
-/* line 134, ../../../private/common-html/sass/partials/_help.scss */
+/* line 138, ../../../private/common-html/sass/partials/_help.scss */
 .expanded-content {
   max-height: 0;
   overflow: hidden;
@@ -1118,18 +1180,18 @@ ul.tabs {
   -webkit-transition: max-height 400ms;
   /* Safari */
 }
-/* line 139, ../../../private/common-html/sass/partials/_help.scss */
+/* line 143, ../../../private/common-html/sass/partials/_help.scss */
 .expanded-content.expand {
   max-height: 1000px;
 }
 
-/* line 144, ../../../private/common-html/sass/partials/_help.scss */
+/* line 148, ../../../private/common-html/sass/partials/_help.scss */
 .page-info {
   width: 60%;
   margin: 12px 0;
 }
 
-/* line 150, ../../../private/common-html/sass/partials/_help.scss */
+/* line 154, ../../../private/common-html/sass/partials/_help.scss */
 .help-adjacent-title {
   margin-top: 0 !important;
   line-height: normal;
@@ -2893,90 +2955,66 @@ div.search i {
 
 /* line 2, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog {
-  /* $nubbin: 20px; */
-  /* margin-top: 1.5 * $nubbin; */
   padding: 20px 20px 20px 20px;
   position: relative;
   background: white;
   border: 1px solid #dddddd;
-  /* &:after, */
-  /* &:before { */
-  /*   bottom: 100%; */
-  /*   left: 60px; */
-  /*   border: solid transparent; */
-  /*   content: " "; */
-  /*   height: 0; */
-  /*   width: 0; */
-  /*   position: absolute; */
-  /*   pointer-events: none; */
-  /* } */
-  /* &:after { */
-  /*   border-color: transparentize( $bg-color, 1); */
-  /*   border-bottom-color: $bg-color; */
-  /*   border-width: $nubbin; */
-  /*   margin-left: -$nubbin; */
-  /* } */
-  /* &:before { */
-  /*   border-color: transparentize( $border-color, 1); */
-  /*   border-bottom-color: $border-color; */
-  /*   border-width: $nubbin + 1px; */
-  /*   margin-left: -$nubbin - 1px; */
-  /* } */
 }
-/* line 39, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 12, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog .left-buttons {
   margin-top: 20px;
 }
-/* line 43, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 16, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog label.mandatory:after {
   content: " *";
   color: #f7ac2e;
 }
-/* line 47, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 20, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog input[type=text], .bubble-dialog textarea {
   box-sizing: border-box;
   width: 100%;
   padding: 4px;
   display: block;
 }
-/* line 54, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 27, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog textarea {
   min-height: 8em;
 }
-/* line 58, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 31, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog input.mandatory {
   border-color: #f7ac2e;
   margin-bottom: 20px;
 }
-/* line 63, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 36, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog .error {
   margin-top: 20px;
   border: 1px solid red;
   color: red;
   padding: 20px;
 }
-/* line 71, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 44, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog table.mandatory tr {
   background-color: initial;
 }
-/* line 73, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 46, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog table.mandatory tr td {
   border: 1px solid #f7ac2e;
   background-color: none;
 }
-/* line 77, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 50, ../../../private/common-html/sass/partials/__guests.scss */
 .bubble-dialog table.mandatory tr td.full {
   width: 33%;
 }
 
 /* line 32, ../../../private/common-html/sass/partials/_help.scss */
-.bubble-dialog-arrow {
+.guest-arrow {
   position: relative;
   z-index: 100;
 }
 
-/* line 36, ../../../private/common-html/sass/partials/_help.scss */
-.bubble-dialog-arrow:after, .bubble-dialog-arrow:before {
+/* line 37, ../../../private/common-html/sass/partials/_help.scss */
+.guest-arrow:after,
+.guest-arrow:before {
   bottom: 100%;
   left: 50%;
   border: solid transparent;
@@ -2989,39 +3027,39 @@ div.search i {
   overflow-y: visible;
 }
 
-/* line 49, ../../../private/common-html/sass/partials/_help.scss */
-.bubble-dialog-arrow:after {
+/* line 51, ../../../private/common-html/sass/partials/_help.scss */
+.guest-arrow:after {
   border-color: rgba(255, 255, 255, 0);
   border-bottom-color: white;
-  border-width: 14px;
-  margin-left: -14px;
+  border-width: 19px;
+  margin-left: -19px;
 }
 
-/* line 55, ../../../private/common-html/sass/partials/_help.scss */
-.bubble-dialog-arrow:before {
+/* line 57, ../../../private/common-html/sass/partials/_help.scss */
+.guest-arrow:before {
   border-color: rgba(221, 221, 221, 0);
   border-bottom-color: #dddddd;
-  border-width: 15px;
-  margin-left: -15px;
+  border-width: 20px;
+  margin-left: -20px;
 }
 
-/* line 62, ../../../private/common-html/sass/partials/_help.scss */
-.stacked .bubble-dialog-arrow {
+/* line 65, ../../../private/common-html/sass/partials/_help.scss */
+.stacked .guest-arrow {
   overflow-y: visible;
-  margin-top: 20px;
+  margin-top: 25px;
   margin-bottom: -1px;
 }
 
-/* line 87, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 60, ../../../private/common-html/sass/partials/__guests.scss */
 .auth-table tr {
   background-color: initial;
 }
-/* line 89, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 62, ../../../private/common-html/sass/partials/__guests.scss */
 .auth-table tr:active {
   background-color: initial;
 }
 
-/* line 95, ../../../private/common-html/sass/partials/__guests.scss */
+/* line 68, ../../../private/common-html/sass/partials/__guests.scss */
 .application-guests {
   margin-bottom: 20px;
 }
